--- a/FC.DAL/App.config
+++ b/FC.DAL/App.config
@@ -10,4 +10,7 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+  <connectionStrings>
+    <add name="FCEntities" connectionString="metadata=res://*/FCZ_Models.csdl|res://*/FCZ_Models.ssdl|res://*/FCZ_Models.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=WL-LOCAL\SQLEXPRESS;initial catalog=FC;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
 </configuration>
