--- a/FC.Craswler/App.config
+++ b/FC.Craswler/App.config
@@ -3,4 +3,7 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
     </startup>
+  <appSettings>
+    <add key="EntityConnection" value="metadata=res://*/FCZ_Models.csdl|res://*/FCZ_Models.ssdl|res://*/FCZ_Models.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=WL-LOCAL\SQLEXPRESS;initial catalog=FC;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" />
+  </appSettings>
 </configuration>
