--- a/FC.DAL/FC.DAL.csproj
+++ b/FC.DAL/FC.DAL.csproj
@@ -42,6 +42,8 @@
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.configuration" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.Security" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -54,10 +56,42 @@
     <Compile Include="EFBase\ModelBase.cs" />
     <Compile Include="EFBase\PropertyParm.cs" />
     <Compile Include="EFBase\RepositoryBase.cs" />
+    <Compile Include="FCZ_Models.Context.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>FCZ_Models.Context.tt</DependentUpon>
+    </Compile>
+    <Compile Include="FCZ_Models.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>FCZ_Models.tt</DependentUpon>
+    </Compile>
+    <Compile Include="FCZ_Models.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>FCZ_Models.edmx</DependentUpon>
+    </Compile>
+    <Compile Include="FC_LeagueMatches.cs">
+      <DependentUpon>FCZ_Models.tt</DependentUpon>
+    </Compile>
+    <Compile Include="FC_Season.cs">
+      <DependentUpon>FCZ_Models.tt</DependentUpon>
+    </Compile>
+    <Compile Include="FC_Team.cs">
+      <DependentUpon>FCZ_Models.tt</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repository\LeagueMatchesRepository.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <EntityDeploy Include="FCZ_Models.edmx">
+      <Generator>EntityModelCodeGenerator</Generator>
+      <LastGenOutput>FCZ_Models.Designer.cs</LastGenOutput>
+    </EntityDeploy>
+    <None Include="FCZ_Models.edmx.diagram">
+      <DependentUpon>FCZ_Models.edmx</DependentUpon>
+    </None>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
@@ -65,6 +99,21 @@
       <Project>{ee6898ac-25de-4f9c-807d-24a8b6585a9f}</Project>
       <Name>FC.Base</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="FCZ_Models.Context.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>FCZ_Models.edmx</DependentUpon>
+      <LastGenOutput>FCZ_Models.Context.cs</LastGenOutput>
+    </Content>
+    <Content Include="FCZ_Models.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>FCZ_Models.edmx</DependentUpon>
+      <LastGenOutput>FCZ_Models.cs</LastGenOutput>
+    </Content>
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
